# a2a-demo

./: .env.example  .gitignore  README.md  __init__.py  __main__.py  pyproject.toml
app/: __init__.py  __main__.py  agent.py  agent_executor.py  client.py
